# pyglplot

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
API/line/: index.html
API/roll/: index.html
API/scatter/: index.html
docs/API/: line.md  roll.md  scatter.md
examples/: example-min.ipynb
pyglplot/: common.py  line.py  plot.py  pyglplot.py  roll.py  scatter.py
search/: search_index.json
src/pyglplot/: pyglplot.py
test/: benchmark.py  readme_example.py  run_test.bat  run_test.sh  setup.bat  setup.sh  test1.ipynb  test1.py  test2.py  testLine.py  testRoll.py  testScatter.py
